Fixes the bug: the "Canned Responses" page is not responsive

--- a/src/app/canned-responses/canned-responses-list.component.scss
+++ b/src/app/canned-responses/canned-responses-list.component.scss
@@ -51,6 +51,10 @@
   }
 }
 
+.isHidden {
+display: none;
+}
+
 // .card_title__underlined {
 //   text-transform: none;
 //   color: #566787;
